--- a/css/scss/_colors.scss
+++ b/css/scss/_colors.scss
@@ -1,6 +1,8 @@
 $white: #ffffff;
-$text: #BCBCBC;
-$text-dark: #7C7C7C;
+$primary: #053317;
+$primary-light: #8CC63F;
+$text: #29292E;
+$text-dark: #676767;
 $border: #8B8B8B;
 $black: #000000;
 $orange-dark:#DE6D28;
