--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-    background-color: $black;
-    height: 14.8094rem;
+    background-color: $primary;
+    height: 17.62rem;
 
     @media ($mobile) {
         height: 33.9rem
@@ -9,11 +9,139 @@
     .content__footer {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
         width: 100%;
-        padding-top: 1.6444rem;
+        padding-top: 3.8881rem;
 
         @media ($mobile) {
             padding-top: 2.025rem;
+        }
+
+        .widget {
+            width: auto;
+
+            .sociais {
+                margin: 2.5337rem 0 2.4481rem;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+            h3 {
+                @include font-primary(0.75rem, 600);
+                color: $white;
+                text-transform: uppercase;
+                margin-bottom: 1.0625rem;
+            }
+
+            ul {
+                width: 14.125rem;
+
+                li {
+                    p {
+                        @include font-primary(0.75rem, 400);
+                        color: $white;
+                        line-height: 1.25rem;
+                    }
+
+                    .mail {
+                        @include font-primary(0.75rem, 400);
+                        color: $white;
+                        line-height: 1.25rem;
+                    }
+                }
+
+                .link {
+                    margin-top: 0.625rem;
+
+                    a {
+                        @include font-primary(0.75rem, 600);
+                        color: $white;
+                    }
+                }
+            }
+
+            .news {
+                width: 16.1875rem;
+
+                form,
+                .wpcf7-form {
+                    .form__row {
+                        width: 100%;
+                        position: relative;
+
+                        p {
+                            position: relative;
+                            height: 2.5rem;
+                        }
+
+                        .field {
+                            background-color: $primary;
+                            border: 0.0625rem solid $white;
+                            border-radius: 0.25rem;
+                            height: 2.5rem;
+                            width: 100%;
+                            padding-left: 1.25rem;
+                            @include font-primary(0.75rem, 400);
+                            color: $white;
+
+                            &::placeholder {
+                                color: $white;
+                            }
+                        }
+
+                        .btn__news {
+                            width: 3.75rem;
+                            height: 2.5rem;
+                            top: 0;
+                            border-radius: 0px 0.25rem 0.25rem 0px;
+                            background-color: $white;
+                            @include font-primary(0.625rem, 400);
+                            color: $text-dark;
+                            text-transform: uppercase;
+                            border: none;
+                            position: absolute;
+                            right: 0;
+                        }
+
+                        .label__check {
+                            .last {
+                                margin: 0.5rem 0 0;
+
+                                label {
+                                    display: flex;
+                                    align-items: flex-start;
+
+                                    input[name='aceite[]'] {
+                                        border: 2px solid $white;
+                                        background: transparent;
+                                        background-color: $primary;
+                                    }
+
+                                    .wpcf7-list-item-label {
+                                        color: $white;
+                                        @include font-primary(0.625rem, 400);
+                                        display: flex;
+                                        margin-left: 0.125rem;
+                                        position: relative;
+                                        bottom: 2px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .copy {
+        width: 100%;
+
+        p {
+            color: $white;
+            text-align: center;
+            @include font-primary(0.75rem, 400);
         }
     }
 
@@ -64,7 +192,7 @@
                 }
 
                 .msg-cookies {
-                    @include font-roboto(0.875rem, 300);
+                    @include font-primary(0.875rem, 300);
                     color: $white;
                     line-height: 1.375rem;
                     text-align: center;
