--- a/css/scss/_colors.scss
+++ b/css/scss/_colors.scss
@@ -1,7 +1,9 @@
 $white: #ffffff;
+$ice: #EEEEF9;
 $primary: #053317;
 $primary-light: #8CC63F;
 $text: #29292E;
+$text-light: #7C7C7C;
 $text-dark: #676767;
 $border: #8B8B8B;
 $black: #000000;
