--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -11,7 +11,7 @@
     /* Mobile */
     @media ($mobile) {
         width: 100%;
-        height: 3.375rem;
+        height: 3.3125rem;
         transition: all .4s;
 
         &.active {
@@ -35,7 +35,7 @@
         /* Mobile */
         @media ($mobile) {
             position: relative;
-            height: 3.375rem;
+            height: 3.3125rem;
             flex-wrap: wrap;
         }
 
@@ -59,7 +59,7 @@
                     height: 100vh;
                     z-index: 0;
                     background-color: $black;
-                    opacity: 0;
+                    opacity: 0.5;
                     visibility: hidden;
                     position: fixed;
                     left: 0;
@@ -104,9 +104,9 @@
                     width: 25.11px;
                     border-radius: 10px;
                     height: 2px;
-                    background-color: $yellow;
+                    background-color: $primary;
                     position: relative;
-                    z-index: 9;
+                    z-index: 3;
                     transform-origin: 50% 50%;
                     transition: all 300ms ease-in-out;
 
@@ -123,8 +123,8 @@
 
         .logo {
             @media ($mobile) {
-                max-width: 1.7731rem;
-                margin-left: 2.6875rem;
+                max-width: 4.4662rem;
+                margin-left: 2.375rem;
             }
         }
 
@@ -139,15 +139,54 @@
 
                 @media ($mobile) {
                     position: fixed;
-                    top: 18.97px;
-                    right: calc(50% - 11rem);
-                    z-index: 4;
+                    display: block;
+                    top: 1.1856rem;
+                    right: calc(50% - 2rem);
+                    z-index: 9;
+                    @include font-primary(0.875rem, 400);
+                    color: $primary;
                     transform: translateX(62.5rem);
+                    text-transform: uppercase;
                     transition: all .4s;
 
                     &.active {
                         transform: translateX(0);
                         transform: all .4s;
+                    }
+                }
+            }
+
+            .sociais {
+                display: none;
+
+                @media ($mobile) {
+                    position: fixed;
+                    display: block;
+                    bottom: 4.3587rem;
+                    right: calc(50% - 10rem);
+                    z-index: 9;
+                    @include font-primary(0.875rem, 400);
+                    color: $primary;
+                    transform: translateX(62.5rem);
+                    text-transform: uppercase;
+                    transition: all .4s;
+                    display: flex;
+
+                    &.active {
+                        transform: translateX(0);
+                        transform: all .4s;
+                    }
+
+                    a {
+                        margin-right: 1.5237rem;
+
+                        &:last-child {
+                            margin-right: 0;
+                        }
+
+                        img {
+                            width: 100%;
+                        }
                     }
                 }
             }
@@ -158,9 +197,9 @@
                 @media ($mobile) {
                     display: flex;
                     justify-content: center;
-                    max-width: 3.0838rem;
-                    right: 4.4rem;
-                    top: 3.0181rem;
+                    max-width: 6.7313rem;
+                    right: 2.2rem;
+                    top: 2.9688rem;
                     z-index: 9;
                     position: fixed;
                     transform: translateX(62.5rem);
@@ -186,11 +225,12 @@
                     right: 0;
                     top: 0;
                     flex-direction: column;
-                    background-color: $black;
-                    width: 11.5rem;
+                    background-color: $white;
+                    width: 13.0625rem;
                     justify-content: flex-start;
                     height: 100vh;
-                    padding: 10.4375rem 0 0;
+                    z-index: 8;
+                    padding: 10.4512rem 1.875rem 0;
                     align-items: center;
                     transform: translateX(62.5rem);
                     transition: all .4s;
@@ -206,12 +246,21 @@
 
                     /* Mobile */
                     @media ($mobile) {
-                        margin-bottom: 1.375rem;
+                        margin-bottom: 1.0313rem;
+                        display: flex;
+                        justify-content: flex-end;
+                        width: 100%;
+                        flex-wrap: wrap;
                     }
 
                     &:first-child {
                         transform: rotateX(0);
                         transition: all .4s;
+
+                        @media ($mobile) {
+                            position: relative;
+                            right: 0.875rem;
+                        }
 
                         &::before {
                             content: '';
@@ -265,6 +314,11 @@
                             margin: auto;
                             transform: rotateX(180deg);
                             transition: all .4s;
+
+                            @media ($mobile) {
+                                top: .3rem;
+                                bottom: initial;
+                            }
                         }
 
                         a {
@@ -276,22 +330,32 @@
 
                     &:last-child {
                         width: 8.375rem;
-                        height: 2.6875rem;
                         background-color: $primary;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         border-radius: 0.1875rem;
 
+                        @media ($mobile) {
+                            width: auto;
+                            margin: 0 0 0 auto;
+                        }
+
                         a {
                             color: $primary-light;
                             font-weight: 600;
                             text-transform: uppercase;
+                            padding: 0.8125rem 1.625rem;
+
 
                             @media ($tabletMin) {
                                 &:hover {
                                     color: $primary-light;
                                 }
+                            }
+
+                            @media ($mobile) {
+                                padding: 0.8125rem 0.5rem;
                             }
                         }
 
@@ -317,8 +381,9 @@
 
                         /* Mobile */
                         @media ($mobile) {
-                            font-size: 0.75rem;
+                            font-size: 0.875rem;
                             line-height: 0.8125rem;
+                            text-align: right;
                         }
                     }
 
@@ -342,10 +407,21 @@
                         background-color: $white;
                         box-shadow: 0px 0.1875rem 0.375rem #00000029;
 
+                        @media ($mobile) {
+                            left: 1rem;
+                            height: 7.875rem;
+                        }
+
                         &.active {
                             opacity: 1;
                             visibility: visible;
                             transition: all .4s;
+
+                            @media ($mobile) {
+                                position: relative;
+                                left: 1rem;
+                                right: 0;
+                            }
                         }
 
                         .menu-item {
@@ -357,6 +433,11 @@
                             }
 
                             &:first-child {
+
+                                @media ($mobile) {
+                                    right: 0;
+                                }
+
                                 &::before {
                                     display: none;
                                 }
@@ -370,9 +451,15 @@
                                 display: initial;
                                 margin-bottom: 0;
 
+                                @media ($mobile) {
+                                    display: flex;
+                                    justify-content: flex-end;
+                                }
+
                                 a {
                                     color: $text;
                                     text-transform: initial;
+                                    padding: 0;
                                 }
 
                                 @media ($tabletMin) {
