--- a/css/scss/_colors.scss
+++ b/css/scss/_colors.scss
@@ -5,7 +5,7 @@ $primary-light: #8CC63F;
 $text: #29292E;
 $text-light: #7C7C7C;
 $text-dark: #676767;
-$border: #8B8B8B;
+$border: #707070;
 $black: #000000;
 $orange-dark:#DE6D28;
 
