--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,4 +1,4 @@
-$mobileMin: 'max-width: 20rem';
+$mobileMin: 'max-width: 320px';
 $mobile: 'max-width: 48rem';
 $tabletMin: 'min-width: 48.0625rem';
 $tabletMax: 'max-width: 64rem';
