--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -13,6 +13,7 @@ Version: 1.0
 @import 'colors';
 @import 'base';
 @import 'button';
+@import 'mixins';
 @import 'header';
 @import 'footer';
 @import 'error';
@@ -22,3 +23,12 @@ Version: 1.0
 @import 'logistica';
 @import 'sustentabilidade';
 @import 'compliance';
+@import 'canal-de-denuncia';
+@import 'ouvidoria';
+@import 'politica';
+@import 'noticias';
+@import 'centro-tecnologico';
+@import 'trabalhe';
+@import 'filiais';
+@import 'produtos';
+@import 'quem-somos';
