--- a/css/scss/_compliance.scss
+++ b/css/scss/_compliance.scss
@@ -5,20 +5,38 @@
         padding-top: 3rem;
         width: 100%;
 
+        @media ($mobile) {
+            padding-top: 3.385rem;
+        }
+
         h2 {
             @include font-primary(1.5625rem, 700);
             color: $primary;
             margin-bottom: 1.4975rem;
+
+            @media ($mobile) {
+                font-size: 1rem;
+                margin-bottom: 1.345rem;
+            }
         }
 
         .text {
             width: 100%;
             margin-bottom: 3rem;
 
+            @media ($mobile) {
+                margin-bottom: 4.5625rem;
+            }
+
             p {
                 @include font-primary(1.125rem, 300);
                 color: $text;
                 line-height: 1.75rem;
+
+                @media ($mobile) {
+                    font-size: 0.75rem;
+                    line-height: 1.5rem;
+                }
             }
         }
 
@@ -26,15 +44,14 @@
             width: 100%;
             margin-bottom: 7rem;
 
+            @media ($mobile) {
+                margin-bottom: 5.5706rem;
+            }
+
             details {
                 width: 100%;
                 margin: auto auto 1.25rem;
                 transition: all 1s !important;
-
-                @media ($mobile) {
-                    padding: 1.75rem 1.0313rem;
-                    max-width: 17.5rem;
-                }
 
                 &[open] {
                     transition: all 2s !important;
@@ -64,14 +81,14 @@
                     border-bottom: 0.0625rem solid $primary-light;
 
                     h3 {
-                        @include font-primary(1.5625rem, 700);
+                        @include font-primary(1.5625rem, 600);
                         color: $primary;
                         line-height: 2rem;
                         padding-bottom: 0.4688rem;
 
                         @media ($mobile) {
                             font-size: 1rem;
-                            line-height: 1.5rem;
+                            line-height: 1.5625rem;
                         }
                     }
 
@@ -86,6 +103,7 @@
 
                         @media ($mobile) {
                             top: 0;
+                            right: 0;
                         }
 
                         img {
@@ -124,7 +142,6 @@
                             }
 
                             a {
-                                font-weight: 600;
                                 text-decoration: underline;
                                 margin-left: .2rem;
                             }
@@ -132,6 +149,7 @@
                             @media ($mobile) {
                                 font-size: 0.75rem;
                                 margin-left: 0;
+                                margin-bottom: 1rem;
                             }
                         }
 
@@ -144,8 +162,127 @@
                                 width: -webkit-fill-available;
                                 list-style: auto;
                                 margin-left: 1rem;
+
+
+                                @media ($mobile) {
+                                    font-size: 0.75rem;
+                                    margin-bottom: 1rem;
+                                }
                             }
                         }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.canais__informacoes {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 11.7431rem;
+
+    @media ($mobile) {
+        margin-bottom: 5.7862rem;
+    }
+
+    .content__canais__informacoes {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        height: 100%;
+        flex-wrap: wrap;
+
+        .box {
+            width: 27.75rem;
+            border-radius: 0.5625rem;
+            margin: auto 2.375rem;
+            box-shadow: 0px 0.1875rem 0.375rem #00000029;
+
+            @media ($mobile) {
+                width: 100%;
+                max-width: 17.6875rem;
+                margin: auto auto 2.5rem;
+            }
+
+            .image {
+                width: 100%;
+                max-height: 12.0625rem;
+
+                .imagem__desktop {
+                    @media ($mobile) {
+                        display: none;
+                    }
+                }
+
+                .image__mobile {
+                    display: none;
+
+                    @media ($mobile) {
+                        display: flex;
+                    }
+                }
+
+                @media ($mobile) {
+                    max-height: 12.09rem;
+                }
+
+                img {
+                    border-top-right-radius: 0.5625rem;
+                    border-top-left-radius: 0.5625rem;
+                    width: 100%;
+                    object-fit: cover;
+                    height: 100%;
+                }
+            }
+
+            .description {
+                background-color: $text;
+                display: flex;
+                width: 100%;
+                flex-direction: column;
+                align-items: center;
+                position: relative;
+                z-index: 1;
+                padding: 4rem 2.0938rem 2.3719rem;
+                border-bottom-left-radius: 0.5625rem;
+                border-bottom-right-radius: 0.5625rem;
+
+                @media ($mobile) {
+                    padding: 1.25rem 1.3125rem 2.4312rem;
+                }
+
+                h3 {
+                    @include font-primary(1.5625rem, 700);
+                    color: $primary-light;
+                    text-align: center;
+                    margin-bottom: 2rem;
+
+                    @media ($mobile) {
+                        max-width: 13.3125rem;
+                        text-align: center;
+                        line-height: 2.1875rem;
+                        margin-bottom: 1rem;
+                    }
+                }
+
+                .text {
+                    width: 100%;
+                    min-height: 10.25rem;
+                    max-height: 10.25rem;
+                    margin-bottom: 2.0869rem;
+
+                    @media ($mobile) {
+                        min-height: 7.375rem;
+                        max-height: 100%;
+                        margin-bottom: 2.5rem;
+                    }
+
+                    p {
+                        @include font-primary(1rem, 300);
+                        color: $white;
+                        line-height: 1.4375rem;
+                        text-align: center;
                     }
                 }
             }
