--- a/css/scss/_home.scss
+++ b/css/scss/_home.scss
@@ -51,6 +51,10 @@
                     top: 7rem;
                 }
 
+                @media ($mobileMin) {
+                    top: 4rem;
+                }
+
                 h1 {
                     @include titulo;
                     color: $white;
@@ -66,6 +70,12 @@
                         max-width: 15.5rem;
                         line-height: 2.3125rem;
                         margin-bottom: 1rem;
+                    }
+
+                    @media ($mobileMin) {
+                        font-size: 1.2rem;
+                        margin-bottom: .5rem;
+                        line-height: 1.7425rem;
                     }
 
                     span {
@@ -88,6 +98,11 @@
                         font-size: 1rem;
                         margin-bottom: 0;
                         line-height: 1.625rem;
+                    }
+
+                    @media ($mobileMin) {
+                        font-size: 0.875rem;
+                        line-height: 1.4rem;
                     }
                 }
             }
@@ -223,7 +238,7 @@
 
     .content__conheca__nossas__linhas {
         padding: 5.8125rem 0 5.7081rem;
-        width: 52%;
+        width: 58%;
         margin: auto 0 auto auto;
         display: flex;
         flex-direction: column;
@@ -304,7 +319,11 @@
         }
 
         .btn__secondary {
-            margin: auto;
+            margin: auto 0;
+
+            @media ($mobile) {
+                margin: auto;
+            }
         }
     }
 }
@@ -341,6 +360,10 @@
         position: absolute;
         bottom: 0;
         z-index: 2;
+
+        @media ($mobileMin) {
+            bottom: 2rem;
+        }
 
         h2 {
             @include titulo;
@@ -404,6 +427,10 @@
                     margin: auto 2.875rem;
                 }
 
+                @media ($mobileMin) {
+                    max-width: 15.6875rem;
+                }
+
                 p {
                     margin-bottom: 2rem;
 
@@ -451,6 +478,10 @@
             @media ($mobile) {
                 max-width: 18.6875rem;
                 margin: auto 2.875rem 2rem;
+            }
+
+            @media ($mobileMin) {
+                max-width: 15.6875rem;
             }
 
             p {
@@ -528,6 +559,21 @@
                     object-fit: cover;
                 }
             }
+
+            @media ($mobileMin) {
+                width: 100%;
+                position: relative;
+                left: 0;
+                bottom: -2rem;
+                display: flex;
+                z-index: 2;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
         }
 
         .image__background__right {
@@ -591,7 +637,7 @@
             }
 
             span {
-                font-weight: 400;
+                font-weight: 300;
             }
         }
 
@@ -662,6 +708,10 @@
             padding-bottom: 4.5rem;
         }
 
+        @media ($desktopLarge) {
+            padding-bottom: 10rem;
+        }
+
         .image {
             width: 10.1163rem;
             margin-right: 6.5687rem;
@@ -724,6 +774,12 @@
         @media ($mobile) {
             display: none;
         }
+
+        @media ($desktopLarge) {
+            img {
+                width: 120rem;
+            }
+        }
     }
 
     .image__background__mobile {
@@ -736,9 +792,11 @@
             bottom: -.5rem;
             right: 0;
             z-index: 0;
+            height: 55%;
 
             img {
                 width: 100%;
+                height: 100%;
             }
         }
     }
@@ -813,6 +871,9 @@
         }
 
         .image {
+            max-width: 37.9963rem;
+            max-height: 37.8106rem;
+
             @media ($mobile) {
                 display: none;
             }
@@ -824,6 +885,10 @@
     width: 100%;
     position: relative;
 
+    @media ($desktopLarge) {
+        margin-top: 10rem;
+    }
+
     .content__certificacao {
         width: 100%;
         display: flex;
@@ -833,6 +898,10 @@
 
         @media ($mobile) {
             padding: 7.5rem 0 4.5rem;
+        }
+
+        @media ($desktopLarge) {
+            padding: 0 0 13.3856rem;
         }
 
         .description {
@@ -876,10 +945,15 @@
         }
 
         .image {
+            max-width: 12.3613rem;
+            max-height: 12.3613rem;
+
             @media ($mobile) {
                 order: 0;
                 margin: auto;
                 width: 8.6944rem;
+                max-width: 8.6944rem;
+                max-height: 100%;
             }
         }
     }
@@ -892,6 +966,12 @@
         @media ($mobile) {
             display: none;
         }
+
+        @media ($desktopLarge) {
+            img {
+                width: 120rem;
+            }
+        }
     }
 
     .image__background__mobile {
@@ -903,9 +983,19 @@
             bottom: 2rem;
             left: 0;
             width: 100%;
+            height: 42.625rem;
 
             img {
                 width: 100%;
+                height: 100%;
+            }
+        }
+
+        @media ($mobileMin) {
+            height: 46.25rem;
+
+            img {
+                height: 100%;
             }
         }
     }
