--- a/css/scss/_sustentabilidade.scss
+++ b/css/scss/_sustentabilidade.scss
@@ -116,7 +116,11 @@
                             @include font-primary(1.125rem, 300);
                             color: $text;
                             line-height: 1.375rem;
-                            margin-bottom: 1rem;
+                            margin-bottom: 1.3rem;
+
+                            &::marker {
+                                font-size: 0.875rem;
+                            }
 
                             @media ($mobile) {
                                 font-size: 0.875rem;
@@ -136,7 +140,7 @@
                 }
 
                 .owl-dots {
-                    bottom: -3.875rem;
+                    bottom: -2.875rem;
                     display: flex;
                     justify-content: center;
                     position: absolute;
@@ -187,16 +191,62 @@
             padding-top: 4.375rem;
         }
 
-        .image {
-            width: auto;
+        .slider__doacao {
+            width: 36.875rem;
 
             @media ($mobile) {
-                order: 1;
+                width: 100%;
+                margin-bottom: 5rem;
             }
 
-            img {
-                object-fit: cover;
+            .image {
+                max-width: 36.875rem;
+                height: 23.6875rem;
+
+                @media ($mobile) {
+                    order: 1;
+                    height: 100%;
+                    width: 100%;
+                }
+
+                img {
+                    object-fit: cover;
+                    width: 100%;
+                }
+            }
+
+            .owl-dots {
+                bottom: -2.875rem;
+                display: flex;
+                justify-content: center;
+                position: absolute;
                 width: 100%;
+
+                .owl-dot {
+                    width: 0.875rem;
+                    height: 0.875rem;
+                    background-color: #8E8E8E;
+                    border: 0.0625rem solid $white;
+                    border-radius: 100%;
+                    margin-right: 1.125rem;
+
+                    &:last-child {
+                        margin-right: 0;
+                    }
+
+                    &.active {
+                        background-color: $white;
+                        border: 2px solid $border;
+                    }
+
+                    &>button {
+                        border-radius: 100%;
+
+                        &::before {
+                            display: none;
+                        }
+                    }
+                }
             }
         }
 
@@ -236,7 +286,11 @@
                         @include font-primary(1.125rem, 300);
                         color: $text;
                         line-height: 1.375rem;
-                        margin-bottom: 1rem;
+                        margin-bottom: 1.3rem;
+
+                        &::marker {
+                            font-size: 0.875rem;
+                        }
 
                         @media ($mobile) {
                             font-size: 0.875rem;
@@ -264,6 +318,8 @@
     .content__acoes__ambientais {
         padding: 7.5rem 0;
         width: 100%;
+        position: relative;
+        z-index: 1;
 
         @media ($mobile) {
             padding-top: 4rem;
@@ -291,10 +347,15 @@
             display: grid;
             width: 100%;
             padding-top: 9.4375rem;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: repeat(3, 1fr);
 
             @media ($mobile) {
                 grid-template-columns: 1fr;
+            }
+
+            @media ($desktopLarge) {
+                margin-top: 10rem;
+                padding-bottom: 7rem;
             }
 
             .widget {
@@ -352,7 +413,9 @@
     .image__background {
         position: absolute;
         bottom: 0;
-        width: 100%;
+        width: 91.875rem;
+        left: -4rem;
+        z-index: 0;
 
         @media ($mobile) {
             display: none;
@@ -360,6 +423,10 @@
 
         img {
             width: 100%;
+        }
+
+        @media ($desktopLarge) {
+            width: 125rem;
         }
     }
 
