--- a/css/scss/_quem-somos.scss
+++ b/css/scss/_quem-somos.scss
@@ -972,6 +972,10 @@
                     top: 15%;
                 }
 
+                &.disabled {
+                    display: none;
+                }
+
                 .owl-prev {
                     left: -1.5rem;
                     position: relative;
